force-app/main/default/objects/SurveyTaker__c/fields/Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_Name__c</fullName>
    <description>Case__r.Agent_Name__c</description>
    <formula>IF (TEXT(Case__r.Origin) == &apos;Email&apos;,  Case__r.Owner:User.FirstName &amp; &quot; &quot; &amp; Case__r.Owner:User.LastName,
Case__r.CreatedBy.FirstName &amp; &quot; &quot; &amp; Case__r.CreatedBy.LastName
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent Name</label>
    <type>Text</type>
</CustomField>