force-app/main/default/objects/SurveyTaker__c/fields/Call_Line_Survey__c.field-meta.xml
<CustomField>
    <fullName>Call_Line_Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related call Line Survey</description>
    <label>Call Line Survey</label>
    <referenceTo>Call_Line__c</referenceTo>
    <relationshipLabel>Surveys Taken (Call Line Survey)</relationshipLabel>
    <relationshipName>Surveys_Taken1</relationshipName>
    <type>Lookup</type>
</CustomField>