force-app/main/default/objects/SurveyTaker__c/fields/Case_Insurance_Type_AFI__c.field-meta.xml
<CustomField>
    <fullName>Case_Insurance_Type_AFI__c</fullName>
    <formula>TEXT( Case__r.Insurance_Type_AFI__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Insurance Type</label>
    <type>Text</type>
</CustomField>