force-app/main/default/objects/SurveyTaker__c/fields/Case_Origin__c.field-meta.xml
<CustomField>
    <fullName>Case_Origin__c</fullName>
    <formula>TEXT( Case__r.Origin)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Origin</label>
    <type>Text</type>
</CustomField>