force-app/main/default/objects/SurveyTaker__c/fields/Email_SMS_Log__c.field-meta.xml
<CustomField>
    <fullName>Email_SMS_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Email &amp; SMS Log</label>
    <referenceTo>Email_SMS_Log__c</referenceTo>
    <relationshipLabel>Surveys Taken</relationshipLabel>
    <relationshipName>Surveys_Taken</relationshipName>
    <type>Lookup</type>
</CustomField>