force-app/main/default/objects/SurveyTaker__c/fields/Email_SMS_Log_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Email_SMS_Log_Created_Date__c</fullName>
    <formula>Email_SMS_Log__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email SMS Log Created Date</label>
    <type>Date</type>
</CustomField>