force-app/main/default/objects/SurveyTaker__c/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <formula>IF ( ISBLANK(Contact__c),  TEXT(Survey__r.Entity__c),
TEXT(Contact__r.Entity__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Entity</label>
    <type>Text</type>
</CustomField>