force-app/main/default/objects/SurveyTaker__c/fields/Ext_Id__c.field-meta.xml
<CustomField>
    <fullName>Ext_Id__c</fullName>
    <label>Ext Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>