force-app/main/default/objects/SurveyTaker__c/fields/ICF_Non_CCC__c.field-meta.xml
<CustomField>
    <fullName>ICF_Non_CCC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ICF Non CCC</label>
    <referenceTo>ICF_Non_CCC__c</referenceTo>
    <relationshipLabel>Surveys Taken</relationshipLabel>
    <relationshipName>Surveys_Taken</relationshipName>
    <type>Lookup</type>
</CustomField>