force-app/main/default/objects/SurveyTaker__c/fields/Insurance_Type__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Type__c</fullName>
    <formula>Email_SMS_Log__r.Insurance_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Insurance Type</label>
    <type>Text</type>
</CustomField>