force-app/main/default/objects/SurveyTaker__c/fields/Log_Book_Activitiy_Detail__c.field-meta.xml
<CustomField>
    <fullName>Log_Book_Activitiy_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Log Book Activitiy Detail</label>
    <referenceTo>Log_Book_Activitiy_Detail__c</referenceTo>
    <relationshipLabel>Surveys Taken</relationshipLabel>
    <relationshipName>Surveys_Taken</relationshipName>
    <type>Lookup</type>
</CustomField>