force-app/main/default/objects/SurveyTaker__c/fields/MOT__c.field-meta.xml
<CustomField>
    <fullName>MOT__c</fullName>
    <formula>TEXT (Email_SMS_Log__r.MOT__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MOT</label>
    <type>Text</type>
</CustomField>