force-app/main/default/objects/SurveyTaker__c/fields/Negative_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Negative_Feedback__c</fullName>
    <label>Negative Feedback</label>
    <summaryFilterItems>
        <field>Survey_Response__c.Negative_Result__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Survey_Response__c.SurveyTaker__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>