force-app/main/default/objects/SurveyTaker__c/fields/Positive_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Positive_Feedback__c</fullName>
    <label>Positive Feedback</label>
    <summaryFilterItems>
        <field>Survey_Response__c.Answer_Index_1__c</field>
        <operation>equals</operation>
        <value>5</value>
    </summaryFilterItems>
    <summaryForeignKey>Survey_Response__c.SurveyTaker__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>