force-app/main/default/objects/SurveyTaker__c/fields/Remark__c.field-meta.xml
<CustomField>
    <fullName>Remark__c</fullName>
    <formula>Email_SMS_Log__r.Case_Type_Remark__c</formula>
    <label>Remark</label>
    <type>Text</type>
</CustomField>