force-app/main/default/objects/SurveyTaker__c/fields/Status_Response__c.field-meta.xml
<CustomField>
    <fullName>Status_Response__c</fullName>
    <formula>IF (Positive_Feedback__c &gt; 0, &quot;Positive&quot;,
IF (Negative_Feedback__c &gt; 0, &quot;Negative&quot;, &quot;Netral&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Response</label>
    <type>Text</type>
</CustomField>