force-app/main/default/objects/SurveyTaker__c/fields/TouchPoint__c.field-meta.xml
<CustomField>
    <fullName>TouchPoint__c</fullName>
    <formula>Email_SMS_Log__r.Touchpoint__c</formula>
    <label>TouchPoint</label>
    <type>Text</type>
</CustomField>