force-app/main/default/objects/SurveyTaker__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>IF ( ISBLANK(Survey__c), &apos;&apos;, 
IF (TEXT(Survey__r.Survey_Type__c) == &apos;I Ask&apos;, &apos;CCC&apos;,
IF (TEXT(Survey__r.Survey_Type__c) == &apos;I Complain&apos;, &apos;CCC&apos;,
&apos;Non-CCC&apos;
)))</description>
    <formula>TEXT( Email_SMS_Log__r.Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>