force-app/main/default/objects/SurveyTaker__c/fields/Update_Call_Line__c.field-meta.xml
<CustomField>
    <fullName>Update_Call_Line__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Call Line</label>
    <type>Checkbox</type>
</CustomField>