force-app/main/default/objects/SurveyTaker__c/fields/WelcomeCall_CallLine__c.field-meta.xml
<CustomField>
    <fullName>WelcomeCall_CallLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Call Line</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Call_Line__c.Case_Type__c</field>
            <operation>equals</operation>
            <value>Welcome Call</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Call_Line__c</referenceTo>
    <relationshipLabel>Surveys Taken</relationshipLabel>
    <relationshipName>Surveys_Taken</relationshipName>
    <type>Lookup</type>
</CustomField>